fix(App View): Fix appview not showing home on show page
Moved show component on App level

--- a/src/views/Show/Styles.css
+++ b/src/views/Show/Styles.css
@@ -51,6 +51,7 @@ iframe {
 /* Show Video */
 section.showVideo {
     width: 100%;
+    flex: 1;
     display: flex;
     flex-direction: row;
     justify-content: center;
